# SudokuSolverCuda

./: .gitignore  ArgsParser.cpp  ArgsParser.h  CMakeLists.txt  Consts.h  README.md  Sudoku.cpp  Sudoku.h  args_parser.h  global_defines.h  main.c  main.cpp  main.cu  portable_functions.h  sudoku.cpp  sudoku.h  sudoku_data.csv
cpu_solver/: cpu_iterative_solver.h  cpu_main.h  cpu_recursive_solver.h  cpu_solver.h
gpu_solver/: gpu_main.cuh  gpu_solver.cuh
